Restore database from last release version